[package]
name = "cloudflare-location-service"
version = "0.1.0"
edition = "2021"
authors = ["DreamingCodes <me@dreaming.codes>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7" }
worker-macros = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.13"
bytes = "1.0"
