[package]
name = "cloudflare-location-service"
version = "0.1.0"
edition = "2021"
authors = ["DreamingCodes <me@dreaming.codes>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
opt-level = "s"
panic = "abort"
strip = true
codegen-units = 1

[dependencies]
worker = { version = "0.7" }
worker-macros = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.14"
bytes = "1.11"
